--- a/notebooks/01-data-explo.ipynb
+++ b/notebooks/01-data-explo.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.imports import * \n",
+    "from src.imports import *\n",
     "\n",
     "from src.transformers import *\n",
     "from src.vars import *"
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('data/source/train.csv')"
+    "train = pd.read_csv(\"data/source/train.csv\")"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('data/source/test.csv')"
+    "test = pd.read_csv(\"data/source/test.csv\")"
    ]
   },
   {
@@ -990,8 +990,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = train.drop('Transported', axis=1)\n",
-    "y = train['Transported']"
+    "X = train.drop(\"Transported\", axis=1)\n",
+    "y = train[\"Transported\"]"
    ]
   },
   {
@@ -1150,7 +1150,7 @@
     }
    ],
    "source": [
-    "sns.pairplot(train, corner=True, hue='Transported')"
+    "sns.pairplot(train, corner=True, hue=\"Transported\")"
    ]
   },
   {
@@ -1167,7 +1167,7 @@
     "    Normalizer(),\n",
     "    QuantileTransformer(n_quantiles=100, output_distribution=\"uniform\"),\n",
     "    QuantileTransformer(n_quantiles=100),\n",
-    "]\n"
+    "]"
    ]
   },
   {
@@ -1204,14 +1204,14 @@
    "outputs": [],
    "source": [
     "param_grid = {\n",
-    "    \n",
-    "\n",
-    "    \"log_transformer__threshold\" : [0.5, 1, 3, 5, 10, 7, 12],\n",
-    "    \"preprocessor__transformers\" : [t0,t1],\n",
-    "    \"sampler_1\" : [RandomUnderSampler(), \"passthrough\"],\n",
-    "    \"scaler\" : scaler_list,\n",
-    "    \"sampler_2\" : [RandomUnderSampler(), \"passthrough\"],\n",
-    "    \"estimator\" : [LogisticRegression(),]\n",
+    "    \"log_transformer__threshold\": [0.5, 1, 3, 5, 10, 7, 12],\n",
+    "    \"preprocessor__transformers\": [t0, t1],\n",
+    "    \"sampler_1\": [RandomUnderSampler(), \"passthrough\"],\n",
+    "    \"scaler\": scaler_list,\n",
+    "    \"sampler_2\": [RandomUnderSampler(), \"passthrough\"],\n",
+    "    \"estimator\": [\n",
+    "        LogisticRegression(),\n",
+    "    ],\n",
     "}"
    ]
   },
@@ -1225,7 +1225,6 @@
     "    pipeline,\n",
     "    param_grid,\n",
     "    cv=3,  # StratifiedShuffleSplit(n_splits=10, test_size=0.2, random_state=42)\n",
-    "\n",
     "    scoring=\"accuracy\",\n",
     "    n_jobs=-1,\n",
     "    return_train_score=True,\n",
@@ -2241,8 +2240,8 @@
     }
    ],
    "source": [
-    "res  = resultize(grid).head(10)\n",
-    "res\n"
+    "res = resultize(grid).head(10)\n",
+    "res"
    ]
   },
   {
@@ -2336,14 +2335,14 @@
    "outputs": [],
    "source": [
     "param_grid = {\n",
-    "    \n",
-    "\n",
-    "    \"log_transformer__threshold\" : [3, 5, 10, 7, 12],\n",
-    "    \"preprocessor__transformers\" : [t0,t1],\n",
-    "    \"sampler_1\" : [RandomUnderSampler(), \"passthrough\"],\n",
-    "    \"scaler\" : [\"passthrough\", StandardScaler(), Normalizer()],\n",
-    "    \"sampler_2\" : [\"passthrough\"],\n",
-    "    \"estimator\" : [RandomForestClassifier(),]\n",
+    "    \"log_transformer__threshold\": [3, 5, 10, 7, 12],\n",
+    "    \"preprocessor__transformers\": [t0, t1],\n",
+    "    \"sampler_1\": [RandomUnderSampler(), \"passthrough\"],\n",
+    "    \"scaler\": [\"passthrough\", StandardScaler(), Normalizer()],\n",
+    "    \"sampler_2\": [\"passthrough\"],\n",
+    "    \"estimator\": [\n",
+    "        RandomForestClassifier(),\n",
+    "    ],\n",
     "}"
    ]
   },
@@ -2380,8 +2379,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res  = resultize(grid).head(10)\n",
-    "res\n"
+    "res = resultize(grid).head(10)\n",
+    "res"
    ]
   }
  ],
