--- a/notebooks/06-datadrift.ipynb
+++ b/notebooks/06-datadrift.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "from src.imports import *\n",
-    "from src.transformers import *\n",
+    "from src.class_transformers import *\n",
     "from src.helpers import *\n",
     "from src.vars import *\n",
     "from src.tools import *\n"
