--- a/notebooks/0301-base-modelization.ipynb
+++ b/notebooks/0301-base-modelization.ipynb
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grid \n",
+    "# grid\n",
     "grid = GridSearchCV(\n",
     "    pipeline,\n",
     "    param_grid,\n",
@@ -341,8 +341,7 @@
     "    return_train_score=True,\n",
     "    verbose=1,\n",
     "    refit=True,\n",
-    "    \n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -382,11 +381,8 @@
     }
    ],
    "source": [
-    "\n",
     "# fit\n",
-    "grid.fit(X, y)\n",
-    "\n",
-    "\n"
+    "grid.fit(X, y)"
    ]
   },
   {
@@ -413,7 +409,7 @@
     "\n",
     "# save & push\n",
     "save_predict_all(grid)\n",
-    "commit_push(res.mean_test_score.iloc[0])\n"
+    "commit_push(res.mean_test_score.iloc[0])"
    ]
   },
   {
@@ -422,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1/0"
+    "1 / 0"
    ]
   },
   {
@@ -440,7 +436,7 @@
     "#     n_jobs=12,\n",
     "#     return_train_score=True,\n",
     "#     verbose=2,\n",
-    "#     refit=True,   \n",
+    "#     refit=True,\n",
     "# )\n",
     "\n",
     "# # fit\n",
@@ -463,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1/0"
+    "1 / 0"
    ]
   },
   {
@@ -504,7 +500,7 @@
     "        (\"sampler\", RandomUnderSampler()),\n",
     "        (\"estimator\", RandomForestClassifier()),\n",
     "    ]\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -514,7 +510,7 @@
    "outputs": [],
    "source": [
     "param_grid_fine = {\n",
-    "    \"estimator__n_estimators\": [ 40, 80, 160, 320, 640, 1280],\n",
+    "    \"estimator__n_estimators\": [40, 80, 160, 320, 640, 1280],\n",
     "    # \"estimator__max_depth\": [None,  4, 8, 16, 32, 64, 128],\n",
     "    # \"estimator__min_samples_split\": [ None, 4,  8, 16, 32, 64, 129],\n",
     "    # \"estimator__oob_score\": [True, False],\n",
@@ -547,7 +543,6 @@
     "    verbose=1,\n",
     "    refit=True,\n",
     "    aggressive_elimination=True,\n",
-    "    \n",
     ")\n",
     "grid_fine"
    ]
