--- a/notebooks/0600-datadrift.ipynb
+++ b/notebooks/0600-datadrift.ipynb
@@ -19,7 +19,7 @@
     "from src.class_transformers import *\n",
     "from src.helpers import *\n",
     "from src.vars import *\n",
-    "from src.tools import *\n"
+    "from src.tools import *"
    ]
   },
   {
@@ -28,13 +28,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from evidently.test_suite import TestSuite\n",
     "from evidently.test_preset import DataStabilityTestPreset\n",
     "\n",
     "from evidently.report import Report\n",
-    "from evidently.metric_preset import DataDriftPreset\n",
-    "\n"
+    "from evidently.metric_preset import DataDriftPreset"
    ]
   },
   {
@@ -43,7 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "train = pd.read_csv(\"data/source/train.csv\")\n",
     "test = pd.read_csv(\"data/source/test.csv\")"
    ]
@@ -88,9 +85,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_drift_report = Report(metrics=[\n",
-    "    DataDriftPreset(),\n",
-    "])\n",
+    "data_drift_report = Report(\n",
+    "    metrics=[\n",
+    "        DataDriftPreset(),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "data_drift_report.run(current_data=test, reference_data=train, column_mapping=None)\n",
     "data_drift_report"
