--- a/notebooks/0301-base-modelization.ipynb
+++ b/notebooks/0301-base-modelization.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grid \n",
+    "# grid\n",
     "grid = GridSearchCV(\n",
     "    pipeline,\n",
     "    param_grid,\n",
@@ -133,8 +133,7 @@
     "    return_train_score=True,\n",
     "    verbose=1,\n",
     "    refit=True,\n",
-    "    \n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -150,11 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# fit\n",
-    "grid.fit(X, y)\n",
-    "\n",
-    "\n"
+    "grid.fit(X, y)"
    ]
   },
   {
@@ -168,7 +164,7 @@
     "\n",
     "# save & push\n",
     "save_predict_all(grid)\n",
-    "commit_push(res.mean_test_score.iloc[0])\n"
+    "commit_push(res.mean_test_score.iloc[0])"
    ]
   },
   {
@@ -186,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1/0"
+    "1 / 0"
    ]
   },
   {
@@ -204,7 +200,7 @@
     "#     n_jobs=12,\n",
     "#     return_train_score=True,\n",
     "#     verbose=2,\n",
-    "#     refit=True,   \n",
+    "#     refit=True,\n",
     "# )\n",
     "\n",
     "# # fit\n",
@@ -227,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1/0"
+    "1 / 0"
    ]
   },
   {
@@ -268,7 +264,7 @@
     "        (\"sampler\", RandomUnderSampler()),\n",
     "        (\"estimator\", RandomForestClassifier()),\n",
     "    ]\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -278,7 +274,7 @@
    "outputs": [],
    "source": [
     "param_grid_fine = {\n",
-    "    \"estimator__n_estimators\": [ 40, 80, 160, 320, 640, 1280],\n",
+    "    \"estimator__n_estimators\": [40, 80, 160, 320, 640, 1280],\n",
     "    # \"estimator__max_depth\": [None,  4, 8, 16, 32, 64, 128],\n",
     "    # \"estimator__min_samples_split\": [ None, 4,  8, 16, 32, 64, 129],\n",
     "    # \"estimator__oob_score\": [True, False],\n",
@@ -311,7 +307,6 @@
     "    verbose=1,\n",
     "    refit=True,\n",
     "    aggressive_elimination=True,\n",
-    "    \n",
     ")\n",
     "grid_fine"
    ]
