mean_test_score: nan

--- a/notebooks/0301-base-modelization.ipynb
+++ b/notebooks/0301-base-modelization.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/alex/tmp/kaggle-spaceship-titanic\n"
+     ]
+    }
+   ],
    "source": [
     "cd .."
    ]
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,18 +130,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grid\n",
+    "# grid \n",
     "grid = GridSearchCV(\n",
     "    pipeline,\n",
     "    param_grid,\n",
     "    # cv=cv(n=10, test_size=0.2),\n",
-    "    cv=10,\n",
+    "    cv=3,\n",
     "    scoring=\"accuracy\",\n",
     "    n_jobs=12,\n",
     "    return_train_score=True,\n",
     "    verbose=1,\n",
     "    refit=True,\n",
-    ")"
+    "    \n",
+    ")\n"
    ]
   },
   {
@@ -149,8 +158,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# fit\n",
-    "grid.fit(X, y)"
+    "grid.fit(X, y)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -164,7 +176,7 @@
     "\n",
     "# save & push\n",
     "save_predict_all(grid)\n",
-    "commit_push(res.mean_test_score.iloc[0])"
+    "commit_push(res.mean_test_score.iloc[0])\n"
    ]
   },
   {
@@ -182,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1 / 0"
+    "1/0"
    ]
   },
   {
@@ -200,7 +212,7 @@
     "#     n_jobs=12,\n",
     "#     return_train_score=True,\n",
     "#     verbose=2,\n",
-    "#     refit=True,\n",
+    "#     refit=True,   \n",
     "# )\n",
     "\n",
     "# # fit\n",
@@ -223,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1 / 0"
+    "1/0"
    ]
   },
   {
@@ -264,7 +276,7 @@
     "        (\"sampler\", RandomUnderSampler()),\n",
     "        (\"estimator\", RandomForestClassifier()),\n",
     "    ]\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -274,7 +286,7 @@
    "outputs": [],
    "source": [
     "param_grid_fine = {\n",
-    "    \"estimator__n_estimators\": [40, 80, 160, 320, 640, 1280],\n",
+    "    \"estimator__n_estimators\": [ 40, 80, 160, 320, 640, 1280],\n",
     "    # \"estimator__max_depth\": [None,  4, 8, 16, 32, 64, 128],\n",
     "    # \"estimator__min_samples_split\": [ None, 4,  8, 16, 32, 64, 129],\n",
     "    # \"estimator__oob_score\": [True, False],\n",
@@ -307,6 +319,7 @@
     "    verbose=1,\n",
     "    refit=True,\n",
     "    aggressive_elimination=True,\n",
+    "    \n",
     ")\n",
     "grid_fine"
    ]
