--- a/ressources/hello.ipynb
+++ b/ressources/hello.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import os \n",
+    "import os\n",
     "import seaborn as sns"
    ]
   },
@@ -30,8 +30,8 @@
    ],
    "source": [
     "l = os.listdir()\n",
-    "l = [i for i in l if i.endswith('.csv')]\n",
-    "l = [i for i in l if i.startswith('spac')]\n",
+    "l = [i for i in l if i.endswith(\".csv\")]\n",
+    "l = [i for i in l if i.startswith(\"spac\")]\n",
     "l"
    ]
   },
@@ -283,11 +283,9 @@
     }
    ],
    "source": [
-    "\n",
     "_df = df.copy()\n",
     "_df = _df.loc[_df.Score > 0.5]\n",
-    "_df = _df.loc[_df.Score <0.83]\n",
-    "\n"
+    "_df = _df.loc[_df.Score < 0.83]"
    ]
   },
   {
@@ -296,8 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "\n"
+    "import plotly.express as px"
    ]
   },
   {
@@ -3398,7 +3395,7 @@
     }
    ],
    "source": [
-    "px.histogram(df, x='Score', nbins=100)"
+    "px.histogram(df, x=\"Score\", nbins=100)"
    ]
   },
   {
@@ -6373,7 +6370,7 @@
     }
    ],
    "source": [
-    "px.histogram(_df, x='Score', nbins=100)"
+    "px.histogram(_df, x=\"Score\", nbins=100)"
    ]
   },
   {
@@ -6382,11 +6379,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "_df = df.copy()\n",
     "_df = _df.loc[_df.Score > 0.774]\n",
-    "_df = _df.loc[_df.Score <0.83]\n",
-    "\n"
+    "_df = _df.loc[_df.Score < 0.83]"
    ]
   },
   {
@@ -8944,7 +8939,7 @@
     }
    ],
    "source": [
-    "px.histogram(_df, x='Score', nbins=100)"
+    "px.histogram(_df, x=\"Score\", nbins=100)"
    ]
   },
   {
